--- a/blocks/jeco-yva-footer/style.scss
+++ b/blocks/jeco-yva-footer/style.scss
@@ -12,6 +12,10 @@
       display: grid;
       gap: 20px;
 
+      * {
+        margin: 0;
+      }
+
       @media (min-width: 1049px) {
         text-align: left;
         gap: 15px;
@@ -42,6 +46,7 @@
       }
 
       img {
+        display: block; 
         width: 100%;
         max-width: 450px;
         margin: 0 auto;
