--- a/blocks/jeco-yva-footer/style.css
+++ b/blocks/jeco-yva-footer/style.css
@@ -33,8 +33,10 @@
   }
 }
 .jeco-yva-footer .wrapper-full .logo {
-  grid-row-start: 1;
   background-color: white;
+  grid-row-start: 1;
+  display: flex;
+  align-items: center;
 }
 @media (min-width: 1049px) {
   .jeco-yva-footer .wrapper-full .logo {
