--- a/blocks/yva-footer/editor-style.scss
+++ b/blocks/yva-footer/editor-style.scss
@@ -1,3 +1,62 @@
 /* Styles for yva-footer block */
 @use "../../scss/breakpoints";
-.yva-footer {}
+
+.yva-footer {
+  background-color: #848484;
+  font-size: 90%;
+  display: grid;
+  gap: 1.5rem;
+
+  @include breakpoints.for-bp('tablet-md') {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  * {
+    color: white;
+  }
+
+  .data {
+    padding: 1.5rem;
+    display: grid;
+    gap: 1.5rem;
+
+    @include breakpoints.for-bp('tablet-sm') {
+      grid-template-columns: 1fr 1fr;
+    }
+
+
+    .right {
+      .icons {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+
+        .icon {
+          width: 40px;
+          height: 40px;
+          object-fit: contain;
+        }
+      }
+    }
+  }
+
+  .logo {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      display: block;
+      width: 100%;
+      max-width: 450px;
+      margin: 0 auto;
+
+      @include breakpoints.for-bp('tablet-md') {
+        height: 120px;
+        object-fit: contain;
+      }
+    }
+  }
+}
