--- a/blocks/yva-footer/editor-style.scss
+++ b/blocks/yva-footer/editor-style.scss
@@ -33,9 +33,11 @@
         align-items: center;
 
         .icon {
-          width: 40px;
-          height: 40px;
-          object-fit: contain;
+          img {
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
+          }
         }
       }
     }
